Fixed contrast issue with cta

--- a/app/assets/stylesheets/commons/_links.sass
+++ b/app/assets/stylesheets/commons/_links.sass
@@ -8,3 +8,4 @@ a[target="_blank"]::after
     margin: 0 0.05rem 0 0.1rem
     vertical-align: -1px
     width: 0.8rem
+    filter: invert(1)
